SATD comment removal 10